// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links IconLink should match snapshot 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="icon-link"
  exact={true}
  to="/"
/>
`;

exports[`Links TabLink should match snapshot 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="tab-link"
  exact={true}
  to="/"
/>
`;
